Remove materials icon alignment fix

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -3625,6 +3625,11 @@ body#login-page {
     margin-top: -50px;
   }
 }
+
 .change_materials .materials .content_wrapper_outer {
   clear: right;
+}
+
+.config-materials .action_icon.delete_icon_disabled {
+  padding-left: 3px;
 }
